--- a/web-server/html/one.html
+++ b/web-server/html/one.html
@@ -5,6 +5,8 @@
     <title>One</title>
   </head>
   <body>
-    Page number 1
+    <h1>Page number 1</h1>
+    <a href="/two.html">Go to page 2</a>
+    <img src="/images/peepo-clown.png" />
   </body>
 </html>
