--- a/web-server/html/two.html
+++ b/web-server/html/two.html
@@ -4,5 +4,9 @@
     <meta charset="UTF-8" />
     <title>Two</title>
   </head>
-  <body>Page number 2</body>
+  <body>
+    <h1>Page number 2</h1>
+    <a href="/one.html">Go to page 1</a>
+    <img src="/images/peepo-happy.png" />
+  </body>
 </html>
